<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/txtId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/txtNombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_nombres"/>
    <EditText
        android:id="@+id/txtApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_apellidos"/>
    <EditText
        android:id="@+id/txtEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_edad"/>
    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_telefono"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_boton_crear"
            android:onClick="validateCreatePerson"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnCancelCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_boton_cancelar"
            android:onClick="cancelCreatePerson"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
